# CallistoSpectrometer

./: .gitignore  ARCHITECTURE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/: dependabot.yml
callisto/: cli.py  constants.py  control.py  logging_utils.py  models.py  runtime.py  serial_backend.py  writers.py  zmq_pub.py
callisto.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
callisto/adapters/: __init__.py  serial_backend.py  writers.py  zmq_pub.py
callisto/application/: __init__.py  config_loader.py  control.py
callisto/domain/: models.py
callisto/ports/: __init__.py
config/: __init__.py  callisto.cfg  settings.py
debian/: changelog  control  copyright
docs/: architecture.md  conf.py  configurations.md  fitsheader.json  hdf5atrrbs.json  index.md  uml.mmd
docs/api/: adapters.md  application.md  domain.md  ports.md
examples/: callisto.cfg  frq00005.cfg  frq00400.cfg  scheduler.cfg  zmq_viewer.py
src/callisto/: __init__.py  __main__.py  constants.py  control.py  runtime.py  serial_backend.py  time_utils.py  writers.py  zmq_pub.py
src/callisto/api/: __init__.py
src/callisto/application/: config_loader.py  frequencies.py
src/callisto/domain/: __init__.py
src/callisto/infrastructure/: __init__.py  ports.py  serial_backend.py  writers.py  zmq_pub.py
tests/: conftest.py  test_cli.py  test_config_loader.py  test_control.py  test_frequencies.py  test_serial_backend.py  test_writers.py
tests/unit/: test_cli.py  test_runtime_frames.py
tests/unit/application/: test_config_loader.py  test_frequencies.py
